--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorPrimary">#0F9D58</color>
     <color name="colorPrimaryDark">#056008</color>
     <color name="colorAccent">#E39D36</color>
+    <color name="colorBackground">#000</color>
 </resources>
