Api - in progress #4 - making /posts working

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context=".screens.SplashScreen">
+    tools:context=".screens.SplashScreenActivity">
 
     <ImageView
         android:id="@+id/SplashScreenImage"
