Api - in progress #7 - API finished, 3rd tab finished

--- a/app/src/main/res/layout/fragment_searcher.xml
+++ b/app/src/main/res/layout/fragment_searcher.xml
@@ -48,7 +48,7 @@
         android:id="@+id/recyclerViewSearcher"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible"
         android:layout_gravity="top"
-        app:layoutManager="LinearLayoutManager" />
+        android:visibility="visible"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 </LinearLayout>
