--- a/app/src/main/res/layout/fragment_searcher.xml
+++ b/app/src/main/res/layout/fragment_searcher.xml
@@ -13,14 +13,14 @@
         android:layout_gravity="top">
 
         <EditText
-            android:id="@+id/number_editText"
+            android:id="@+id/text_editText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
             android:autofillHints=""
             android:ems="10"
             android:hint="@string/number"
-            android:inputType="number"
+            android:inputType="text"
             android:minHeight="48dp"
             android:textColorHint="#546E7A"
             android:visibility="visible"
@@ -39,7 +39,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/number_editText"
+            app:layout_constraintTop_toBottomOf="@+id/text_editText"
             app:srcCompat="@drawable/chuck_norris_button"
             tools:ignore="ImageContrastCheck" />
     </androidx.constraintlayout.widget.ConstraintLayout>
