--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -28,6 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:srcCompat="@drawable/chuck_norris_button"
                 tools:ignore="ContentDescription" />
 
             <LinearLayout
@@ -45,6 +46,7 @@
                     android:layout_marginTop="30dp"
                     android:layout_marginEnd="30dp"
                     android:textSize="16sp"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
@@ -55,9 +57,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
                     android:layout_marginEnd="30dp"
+                    android:layout_marginTop="30dp"
                     android:clickable="true"
                     android:focusable="true"
                     android:textSize="16sp"
+                    android:visibility="gone"
                     app:layout_constraintStart_toStartOf="@+id/icon_url"
                     app:layout_constraintTop_toBottomOf="@+id/icon_url"
                     tools:ignore="SpeakableTextPresentCheck" />
@@ -68,7 +72,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
                     android:layout_marginEnd="30dp"
+                    android:layout_marginTop="30dp"
                     android:textSize="16sp"
+                    android:visibility="gone"
                     app:layout_constraintStart_toStartOf="@+id/url"
                     app:layout_constraintTop_toBottomOf="@+id/url"/>
 
@@ -78,7 +84,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
                     android:layout_marginEnd="30dp"
+                    android:layout_marginTop="30dp"
                     android:textSize="16sp"
+                    android:visibility="gone"
                     app:layout_constraintStart_toStartOf="@+id/id"
                     app:layout_constraintTop_toBottomOf="@+id/id"/>
 
@@ -88,6 +96,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
                     android:layout_marginEnd="30dp"
+                    android:layout_marginTop="30dp"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="@+id/category"
                     app:layout_constraintTop_toBottomOf="@+id/category"/>
