--- a/app/src/main/res/layout/fragment_searcher.xml
+++ b/app/src/main/res/layout/fragment_searcher.xml
@@ -36,6 +36,9 @@
             android:contentDescription="@string/get"
             android:textColor="#546E7A"
             android:visibility="visible"
+            android:background="@drawable/ripple_effect"
+            android:layout_marginStart="75dp"
+            android:layout_marginEnd="75dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
