--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -24,10 +24,11 @@
             <ImageView
                 android:id="@+id/imageView"
                 android:tag="image_tag"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_margin="16dp"
                 android:layout_weight="1"
+                android:layout_gravity="center_vertical"
                 app:srcCompat="@drawable/chuck_norris_button"
                 tools:ignore="ContentDescription" />
 
@@ -42,64 +43,69 @@
                     android:id="@+id/icon_url"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
                     android:layout_marginTop="30dp"
                     android:layout_marginEnd="30dp"
                     android:textSize="16sp"
                     android:visibility="gone"
+                    android:justificationMode="inter_word"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:targetApi="o"/>
 
                 <TextView
                     android:id="@+id/url"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
                     android:layout_marginEnd="30dp"
                     android:layout_marginTop="30dp"
                     android:clickable="true"
                     android:focusable="true"
                     android:textSize="16sp"
                     android:visibility="gone"
+                    android:justificationMode="inter_word"
                     app:layout_constraintStart_toStartOf="@+id/icon_url"
                     app:layout_constraintTop_toBottomOf="@+id/icon_url"
-                    tools:ignore="SpeakableTextPresentCheck" />
+                    tools:ignore="SpeakableTextPresentCheck"
+                    tools:targetApi="o"/>
 
                 <TextView
                     android:id="@+id/id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
                     android:layout_marginEnd="30dp"
                     android:layout_marginTop="30dp"
                     android:textSize="16sp"
                     android:visibility="gone"
+                    android:justificationMode="inter_word"
                     app:layout_constraintStart_toStartOf="@+id/url"
-                    app:layout_constraintTop_toBottomOf="@+id/url"/>
+                    app:layout_constraintTop_toBottomOf="@+id/url"
+                    tools:targetApi="o"/>
 
                 <TextView
                     android:id="@+id/category"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
                     android:layout_marginEnd="30dp"
                     android:layout_marginTop="30dp"
                     android:textSize="16sp"
                     android:visibility="gone"
+                    android:justificationMode="inter_word"
                     app:layout_constraintStart_toStartOf="@+id/id"
-                    app:layout_constraintTop_toBottomOf="@+id/id"/>
+                    app:layout_constraintTop_toBottomOf="@+id/id"
+                    tools:targetApi="o"/>
 
                 <TextView
                     android:id="@+id/value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
                     android:layout_marginEnd="30dp"
                     android:layout_marginTop="30dp"
                     android:textSize="16sp"
+                    android:justificationMode="inter_word"
                     app:layout_constraintStart_toStartOf="@+id/category"
-                    app:layout_constraintTop_toBottomOf="@+id/category"/>
+                    app:layout_constraintTop_toBottomOf="@+id/category"
+                    tools:targetApi="o"/>
 
             </LinearLayout>
 
