--- a/app/src/main/res/layout/fragment_searcher.xml
+++ b/app/src/main/res/layout/fragment_searcher.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -45,6 +46,7 @@
             app:layout_constraintTop_toBottomOf="@+id/text_editText"
             app:srcCompat="@drawable/chuck_norris_button"
             tools:ignore="ImageContrastCheck" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
