--- a/app/src/main/res/layout/string_card_view.xml
+++ b/app/src/main/res/layout/string_card_view.xml
@@ -43,7 +43,7 @@
                 android:layout_marginStart="16dp">
 
                 <TextView
-                    android:id="@+id/category"
+                    android:id="@+id/categories"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
