--- a/app/src/main/res/layout/fragment_searcher.xml
+++ b/app/src/main/res/layout/fragment_searcher.xml
@@ -10,8 +10,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:layout_gravity="top">
+        android:layout_gravity="top"
+        android:layout_marginTop="0dp">
 
         <EditText
             android:id="@+id/text_editText"
@@ -34,19 +34,20 @@
             android:id="@+id/btn_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="75dp"
+            android:layout_marginEnd="75dp"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/ripple_effect"
             android:contentDescription="@string/get"
             android:textColor="#546E7A"
             android:visibility="visible"
-            android:background="@drawable/ripple_effect"
-            android:layout_marginStart="75dp"
-            android:layout_marginEnd="75dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_editText"
             app:srcCompat="@drawable/chuck_norris_button"
             tools:ignore="ImageContrastCheck" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
