--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -2,114 +2,128 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
+    app:layout_constrainedWidth="true"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="15dp"
         app:cardElevation="10dp"
         app:cardUseCompatPadding="true"
-        app:cardBackgroundColor="@color/white">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="wrap_content"
+            app:layout_constrainedWidth="true"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_margin="16dp">
 
             <ImageView
                 android:id="@+id/imageView"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:layout_marginEnd="16dp"
                 android:tag="image_tag"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/chuck_norris_button"
+                tools:ignore="ContentDescription,ImageContrastCheck" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:layout_weight="1"
-                android:layout_gravity="center_vertical"
-                app:srcCompat="@drawable/chuck_norris_button"
-                tools:ignore="ContentDescription" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginBottom="30dp"
-                android:layout_weight="5">
+                app:layout_constrainedWidth="true"
+                app:layout_constraintWidth_default="wrap"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/favButton"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
-                    android:id="@+id/icon_url"
-                    android:layout_width="match_parent"
+                    android:id="@+id/value"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginEnd="30dp"
                     android:textSize="16sp"
-                    android:visibility="gone"
                     android:justificationMode="inter_word"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:targetApi="o"/>
+                    tools:targetApi="o" />
 
-                <TextView
-                    android:id="@+id/url"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="30dp"
-                    android:layout_marginTop="30dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:textSize="16sp"
-                    android:visibility="gone"
-                    android:justificationMode="inter_word"
-                    app:layout_constraintStart_toStartOf="@+id/icon_url"
-                    app:layout_constraintTop_toBottomOf="@+id/icon_url"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    tools:targetApi="o"/>
+                <!--                <TextView-->
+                <!--                    android:id="@+id/icon_url"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:justificationMode="inter_word"-->
+                <!--                    android:textSize="16sp"-->
+                <!--                    android:visibility="gone"-->
+                <!--                    app:layout_constraintStart_toStartOf="@+id/value"-->
+                <!--                    app:layout_constraintTop_toBottomOf="@+id/value"-->
+                <!--                    tools:targetApi="o" />-->
 
-                <TextView
-                    android:id="@+id/id"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="30dp"
-                    android:layout_marginTop="30dp"
-                    android:textSize="16sp"
-                    android:visibility="gone"
-                    android:justificationMode="inter_word"
-                    app:layout_constraintStart_toStartOf="@+id/url"
-                    app:layout_constraintTop_toBottomOf="@+id/url"
-                    tools:targetApi="o"/>
+                <!--                <TextView-->
+                <!--                    android:id="@+id/url"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:clickable="true"-->
+                <!--                    android:focusable="true"-->
+                <!--                    android:justificationMode="inter_word"-->
+                <!--                    android:textSize="16sp"-->
+                <!--                    android:visibility="gone"-->
+                <!--                    app:layout_constraintStart_toStartOf="@+id/icon_url"-->
+                <!--                    app:layout_constraintTop_toBottomOf="@+id/icon_url"-->
+                <!--                    tools:ignore="SpeakableTextPresentCheck"-->
+                <!--                    tools:targetApi="o" />-->
 
-                <TextView
-                    android:id="@+id/category"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="30dp"
-                    android:layout_marginTop="30dp"
-                    android:textSize="16sp"
-                    android:visibility="gone"
-                    android:justificationMode="inter_word"
-                    app:layout_constraintStart_toStartOf="@+id/id"
-                    app:layout_constraintTop_toBottomOf="@+id/id"
-                    tools:targetApi="o"/>
+                <!--                <TextView-->
+                <!--                    android:id="@+id/id"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:justificationMode="inter_word"-->
+                <!--                    android:textSize="16sp"-->
+                <!--                    android:visibility="gone"-->
+                <!--                    app:layout_constraintStart_toStartOf="@+id/url"-->
+                <!--                    app:layout_constraintTop_toBottomOf="@+id/url"-->
+                <!--                    tools:targetApi="o" />-->
 
-                <TextView
-                    android:id="@+id/value"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="30dp"
-                    android:layout_marginTop="30dp"
-                    android:textSize="16sp"
-                    android:justificationMode="inter_word"
-                    app:layout_constraintStart_toStartOf="@+id/category"
-                    app:layout_constraintTop_toBottomOf="@+id/category"
-                    tools:targetApi="o"/>
+                <!--                <TextView-->
+                <!--                    android:id="@+id/category"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:justificationMode="inter_word"-->
+                <!--                    android:textSize="16sp"-->
+                <!--                    android:visibility="gone"-->
+                <!--                    app:layout_constraintStart_toStartOf="@+id/id"-->
+                <!--                    app:layout_constraintTop_toBottomOf="@+id/id"-->
+                <!--                    tools:targetApi="o" />-->
 
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </LinearLayout>
+            <ImageButton
+                android:id="@+id/favButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:layout_marginStart="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/fav_empty"
+                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
