--- a/app/src/main/res/layout/fragment_searcher.xml
+++ b/app/src/main/res/layout/fragment_searcher.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginTop="0dp">
+        android:layout_gravity="top|center_vertical"
+        android:layout_marginTop="0dp"
+        app:layout_constrainedWidth="true">
 
         <EditText
             android:id="@+id/text_editText"
